[package]
name = "lpr"
version = "0.1.3"
authors = ["Gerrit Pape <papeg@crowler.org>"]
description = "simple LPR client using the classic Line Printer Daemon Protocol - TCP only"
license = "AGPL-3.0"
repository = "https://github.com/filehoarder/lpr-rs"

[dependencies]
hostname = "0.1.5"
username = "0.2.0"
clap = "2.32.0"
